[project]
name = "apssh"
version = "0.26.0"
description = "Asynchroneous Parallel ssh"
license = {text = "CC BY-SA 4.0"}
readme = "README.md"
authors = [
    {name = "Thierry Parmentelat", email = "thierry.parmentelat@inria.fr"},
]
keywords = ["asyncio", "remote shell", "ssh", "parallel ssh"]

requires-python = ">=3.10"
dependencies = [
    "asyncssh",
    "asynciojobs",
    "jinja2",
    "pyyaml",
]


[project.scripts]
apssh = "apssh.__main__:apssh"
appush = "apssh.__main__:appush"
appull = "apssh.__main__:appull"


[project.optional-dependencies]
readthedocs = [
    "sphinx-autodoc-typehints",
    "myst-parser",
    "recommonmark",
]
tests = [
    "pytest",
    "psutil",
]


[project.urls]
Homepage = "http://github.com/parmentelat/apssh"
Documentation = "http://apssh.readthedocs.io/"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
